# router-ip-watcher

./: .gitignore  README.md  debug-install.sh  requirements.txt  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
default_config/: route-send-public-ip-robot.ini  router-ip-watcher.ini  send-route-public-ip-robot.ini  send-route-public-ip.ini
route_send_public_ip_robot/: __init__.py  calc_public_ip.py  read_config.py  run_robot.py  send_msg.py
route_send_public_ip_robot/utils/: base.py  common.py  linux.py
router_ip_watcher/: __init__.py  calc_public_ip.py  calc_wan_ip.py  model.py  read_config.py  run_robot.py  send_msg.py
router_ip_watcher/utils/: base.py  common.py  linux.py
send_route_public_ip_robot/: __init__.py  calc_public_ip.py  main.py  model.py  read_config.py  run_robot.py  send_msg.py
send_route_public_ip_robot/utils/: base.py  common.py  file.py  linux.py
tools/: cs-route-send-public-ip-robot-service  cs-router-ip-watcher-service  cs-send-route-public-ip-robot-service
