[metadata]
name = send-route-public-ip-robot
big_number_version = 0
small_number_version = 0
conda_venv_name = chaoshen
summary = send route public ip
description_file = README.md
author = m986883511
author_email = xxx
home_page = https://github.com/m986883511
python_requires = >=3.8
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    send_route_public_ip_robot
data_files =
    share/chaoshen-toolbox/send_route_public_ip_robot/default_config = default_config/*
;scripts =
;    tools/cs-hello.sh

[entry_points]
console_scripts =
    cs-test-read-config = send_route_public_ip_robot.read_config:main
    cs-test-send-msg = send_route_public_ip_robot.send_msg:main
    cs-test-calc-public-ip=send_route_public_ip_robot.calc_public_ip:main
