[metadata]
name = route-send-public-ip-robot
big_number_version = 0
small_number_version = 0
conda_venv_name = chaoshen
summary = send route public ip
description_file = README.md
author = chaoshen
author_email = xxx
home_page = https://github.com/m986883511
python_requires = >=3.8
license = Apache License, Version 2.0
classifier =
    Environment :: chaoshen
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    route_send_public_ip_robot
data_files =
    share/chaoshen-toolbox/route_send_public_ip_robot/default_config = default_config/*
scripts =
    tools/cs-route-send-public-ip-robot-service

[entry_points]
console_scripts =
    cs-route-test-read-config = route_send_public_ip_robot.read_config:main
    cs-route-test-send-msg = route_send_public_ip_robot.send_msg:main
    cs-route-test-calc-public-ip=route_send_public_ip_robot.calc_public_ip:main
    cs-route-run-send-public-ip-robot=route_send_public_ip_robot.run_robot:main
