[metadata]
name = router-ip-watcher
big_number_version = 0
small_number_version = 0
conda_venv_name = chaoshen
summary = send router wan ip
description_file = README.md
author = chaoshen
author_email = xxx
home_page = https://github.com/m986883511
python_requires = >=3.8
license = Apache License, Version 2.0
classifier =
    Environment :: chaoshen
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    router_ip_watcher
data_files =
    share/chaoshen-toolbox/router_ip_watcher/default_config = default_config/*
scripts =
    tools/cs-router-ip-watcher-service

[entry_points]
console_scripts =
    cs-router-test-read-config = router_ip_watcher.read_config:main
    cs-router-test-send-msg = router_ip_watcher.send_msg:main
    cs-router-test-calc-wan-ip=router_ip_watcher.calc_wan_ip:main
    cs-router-run-router-ip-watcher=router_ip_watcher.run_robot:main
